--- a/src/public/css/attendance.css
+++ b/src/public/css/attendance.css
@@ -1,130 +1,64 @@
-.category__alert--success {
-    padding: 10px 30px;
-    border-color: #badbcc;
-    background-color: #d1e7dd;
-    color: #0f5132;
-  }
-  
-  .category__alert--danger {
-    padding: 10px 0;
-    border-color: #f5c2c7;
-    background-color: #f8d7da;
-    color: #842029;
-  }
-  
-  .category__alert--danger ul {
-    margin: 0;
-  }
-  
-  .category__content {
-    margin: 0 auto;
-    padding: 60px 15px;
-    max-width: 1230px;
-  }
-  
-  .create-form {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
-    width: 70%;
+.todo-table {
+  margin: 30px auto;
+  width: 70%;
+  text-align: center;
+}
+
+.todo-table__inner {
+  width: 100%;
+}
+
+.todo-table__row {
+  border-bottom: 1px solid #ddd;
+  margin-bottom:8px;
+  padding: 10px;
+}
+
+.todo-table__header {
+  padding: 12px;
+  width: 20%;
+  text-align: left;
+  font-weight: bold;
+  border-top: solid 1px #c8c8c8;
+  border-bottom:solid 1px #c8c8c8 ;
+  padding-bottom:20px;
+  padding-top:20px;
+  margin-bottom: 20px;
+}
+
+.todo-table__header-span {
+   margin-right: 15%;
+ }
+
+.todo-table__item:first-of-type {
+  padding: 12px;
+  width: 90%;
+}
+
+.update-form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.update-form__item {
+   width: 40%;
+  line-height: 50%;
+}
+
+.update-form__item-input {
+  border: none;
+}
+
+ .update-form__item-p {
+     text-align: left;
+     font-size: 13px;
+ }
+  footer{
+    padding-top: 10px;
+    padding-bottom: 10px;
     text-align: center;
-  }
-  
-  .create-form__item {
-    width: 70%;
-  }
-  
-  .create-form__item-input {
-    padding: 10px;
-    width: 100%;
-    height: 40px;
-    border: 1px solid #ddd;
-    border-radius: 3px;
-  }
-  
-  .create-form__button {
-    width: 20%;
-  }
-  
-  .create-form__button-submit {
-    padding: 10px;
-    width: 100%;
-    height: 40px;
-    border: none;
-    border-radius: 3px;
-    background: #000;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  .category-table {
-    margin: 30px auto;
-    width: 70%;
-    text-align: center;
-  }
-  
-  .category-table__inner {
-    width: 100%;
-  }
-  
-  .category-table__row {
-    border-bottom: 1px solid #ddd;
-  }
-  
-  .category-table__header {
-    padding: 12px;
-    width: 20%;
-    text-align: left;
+    bottom:0;
     font-weight: bold;
-  }
-  
-  .category-table__item:first-of-type {
-    padding: 12px;
-    width: 90%;
-  }
-  
-  .update-form {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .update-form__item {
-    width: 80%;
-    line-height: 50%;
-  }
-  
-  .update-form__item-input {
-    width: 100%;
-    outline: none;
-    border: none;
-  }
-  
-  .update-form__button {
-    width: 50px;
-  }
-  
-  .update-form__button-submit {
-    padding: 5px;
-    width: 100%;
-    border: none;
-    border-radius: 3px;
-    background: #0000ff;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  .delete-form__button {
-    width: 50px;
-  }
-  
-  .delete-form__button-submit {
-    padding: 5px;
-    width: 100%;
-    border: none;
-    border-radius: 3px;
-    background: #ff0000;
-    color: #fff;
-    cursor: pointer;
-  }
+ }
 
