--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,21 +1,3 @@
-.todo__alert--success {
-    padding: 10px 30px;
-    border-color: #badbcc;
-    background-color: #d1e7dd;
-    color: #0f5132;
-  }
-
-  .todo__alert--danger {
-    padding: 10px 0;
-    border-color: #f5c2c7;
-    background-color: #f8d7da;
-    color: #842029;
-  }
-
-  .todo__alert--danger ul {
-    margin: 0;
-  }
-
   .todo__content {
     margin: 0 auto;
    padding: 30px 15px;
@@ -26,17 +8,6 @@
    margin: 0 auto;
    width: 70%;
  }
-
-
- .create-form, .search-form {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
-   margin-bottom: 15px;
-    width: 70%;
-    text-align: center;
-  }
-
 
  .create-form__item, .search-form__item {
    display: flex;
@@ -63,50 +34,20 @@
    appearance: none;
  }
 
- .create-form__button, .search-form__button {
-    width: 20%;
-  }
+
 
 
  .create-form__button-submit, .search-form__button-submit {
     padding: 10px;
-    width: 100%;
-    height: 40px;
+    width: 500px;
+    height:180px;
     border: none;
     border-radius: 3px;
-    background: #000;
-    color: #fff;
+    background: #ffffff;
+    color: #d5d5d5;
     cursor: pointer;
-  }
-
-  .todo-table {
-    margin: 30px auto;
-    width: 70%;
-    text-align: center;
-  }
-
-  .todo-table__inner {
-    width: 100%;
-  }
-
-  .todo-table__row {
-    border-bottom: 1px solid #ddd;
-  }
-
-  .todo-table__header {
-    padding: 12px;
-    width: 20%;
-    text-align: left;
     font-weight: bold;
-  }
-
- .todo-table__header-span {
-   margin-right: 40%;
- }
-
-  .todo-table__item:first-of-type {
-    padding: 12px;
-    width: 90%;
+    font-size: 22px;
   }
 
   .update-form {
@@ -122,8 +63,6 @@
   }
 
   .update-form__item-input {
-    width: 100%;
-    outline: none;
     border: none;
   }
 
@@ -145,17 +84,27 @@
     color: #fff;
     cursor: pointer;
   }
+  .work{
+    display: flex;
+    justify-content: space-between;
+    margin:70px;
+    margin-bottom: -30px;
 
-  .delete-form__button {
-    width: 50px;
+  }
+  .break{
+    display: flex;
+    justify-content: space-between;
+    margin:70px;
   }
 
-  .delete-form__button-submit {
-    padding: 5px;
-    width: 100%;
-    border: none;
-    border-radius: 3px;
-    background: #ff0000;
-    color: #fff;
-    cursor: pointer;
+ 
+  main{
+    background-color: rgb(255, 238, 252);
   }
+  footer{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    bottom:0;
+    font-weight: bold;
+ }
